Tests/DependencyInjection/Fixtures/annotations/inject/invalid/FooClassInvalidSetterInjection1.php
<?php
/** @Service */
class FooClassInvalidSetterInjection1
{
    /** @Inject({"foo", "bar"}) */
    public function setDependencies($fooService)
    {
    }
}
